--- a/app/src/main/res/layout/fragment_logout.xml
+++ b/app/src/main/res/layout/fragment_logout.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".LogoutFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LogoutFragment"
-        android:textSize="25dp"
-        android:layout_centerInParent="true" />
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="LogoutFragment"-->
+<!--        android:textSize="25dp"-->
+<!--        android:layout_centerInParent="true" />-->
 
 </RelativeLayout>
