--- a/app/src/main/res/layout/activity_add_user_records.xml
+++ b/app/src/main/res/layout/activity_add_user_records.xml
@@ -16,20 +16,20 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="INSERT RECORD"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15sp"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginBottom="30sp"/>
+        android:layout_marginBottom="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1.Date of Measurement:"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="5sp"
         android:layout_marginLeft="20sp"
         />
 
@@ -42,7 +42,7 @@
         android:textColorHint="@color/white"
         android:inputType="date"
         android:textColor="@color/white"
-        android:layout_marginBottom="15sp"
+        android:layout_marginBottom="5sp"
         android:backgroundTint="@color/white"
         android:layout_marginLeft="30sp"
         />
@@ -52,9 +52,9 @@
         android:layout_height="wrap_content"
         android:text="2.Time of Measurement:"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="5sp"
         android:layout_marginLeft="20sp"
         />
     <EditText
@@ -65,7 +65,7 @@
         android:textColorHint="@color/white"
         android:inputType="datetime"
         android:textColor="@color/white"
-        android:layout_marginBottom="15sp"
+        android:layout_marginBottom="5sp"
         android:backgroundTint="@color/white"
         android:layout_marginLeft="30sp"
         />
@@ -75,9 +75,9 @@
         android:layout_height="wrap_content"
         android:text="3.Systolic Pressure:"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="5sp"
         android:layout_marginLeft="20sp"
         />
     <EditText
@@ -88,7 +88,7 @@
         android:textColorHint="@color/white"
         android:inputType="number"
         android:textColor="@color/white"
-        android:layout_marginBottom="15sp"
+        android:layout_marginBottom="5sp"
         android:backgroundTint="@color/white"
         android:layout_marginLeft="30sp"
         />
@@ -98,9 +98,9 @@
         android:layout_height="wrap_content"
         android:text="4.Diastolic Pressure:"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="5sp"
         android:layout_marginLeft="20sp"
         />
     <EditText
@@ -111,7 +111,7 @@
         android:textColorHint="@color/white"
         android:inputType="number"
         android:textColor="@color/white"
-        android:layout_marginBottom="15sp"
+        android:layout_marginBottom="5sp"
         android:backgroundTint="@color/white"
         android:layout_marginLeft="30sp"
         />
@@ -121,9 +121,9 @@
         android:layout_height="wrap_content"
         android:text="5.Heart Rate:"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="5sp"
         android:layout_marginLeft="20sp"
         />
 
@@ -135,7 +135,7 @@
         android:textColorHint="@color/white"
         android:inputType="number"
         android:textColor="@color/white"
-        android:layout_marginBottom="15sp"
+        android:layout_marginBottom="5sp"
         android:backgroundTint="@color/white"
         android:layout_marginLeft="30sp"
         />
@@ -145,9 +145,9 @@
         android:layout_height="wrap_content"
         android:text="6.Comment:"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="2sp"
         android:layout_marginLeft="20sp"
         />
 
@@ -158,7 +158,7 @@
         android:textColorHint="@color/white"
         android:inputType="textPersonName"
         android:textColor="@color/white"
-        android:layout_marginBottom="15sp"
+        android:layout_marginBottom="2sp"
         android:backgroundTint="@color/white"
         android:layout_marginLeft="30sp"
         />
@@ -174,6 +174,4 @@
         android:textSize="15sp"
         android:layout_gravity="center"
         />
-
-
 </LinearLayout>
