--- a/app/src/main/res/layout/activity_user_records.xml
+++ b/app/src/main/res/layout/activity_user_records.xml
@@ -7,7 +7,7 @@
     tools:context=".userRecords">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/userRecords"
+        android:id="@+id/recycleViewId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="40dp"
