--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,16 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:gravity="center"
     android:background="#03a9f4"
     tools:context=".SplashActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "CardiacRecords"
-        android:textSize="43sp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        />
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <pl.droidsonroids.gif.GifImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/heartgif2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CardiacRecords"
+            android:textColor="#fff"
+            android:layout_marginTop="30sp"
+            android:textSize="43sp"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
+
 </LinearLayout>
