--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -67,14 +67,21 @@
         android:textColor="#fff"
         android:textSize="18dp"
         android:textStyle="bold" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already have an accout? Sign In"
-        android:textStyle="bold"
-        android:textSize="18dp"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        />
+        android:onClick="redirectLogin"
+        android:text="Already have an accout? Sign In"
+        android:textSize="18dp"
+        android:textStyle="bold" />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="200sp"
+        android:layout_height="100sp"
+        android:layout_marginTop="10sp"
+        android:src="@drawable/heartgif1" />
 
 </LinearLayout>
