--- a/app/src/main/res/layout/activity_user_records.xml
+++ b/app/src/main/res/layout/activity_user_records.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/dashboardbackground" />
+        android:background="@drawable/bg3" />
 
     <FrameLayout
         android:layout_width="match_parent"
